WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
181046
stderr and _IONBF used without including stdio.h
https://bugs.webkit.org/show_bug.cgi?id=181046
Summary
stderr and _IONBF used without including stdio.h
Ting-Wei Lan
Reported
2017-12-20 10:42:18 PST
This causes compilation error on FreeBSD: FAILED: Source/bmalloc/CMakeFiles/bmalloc.dir/bmalloc/IsoTLS.cpp.o /usr/bin/clang++ -DBUILDING_GTK__=1 -DBUILDING_WITH_CMAKE=1 -DBUILDING_bmalloc -DDATA_DIR=\"share\" -DGETTEXT_PACKAGE=\"WebKit2GTK-4.0\" -DHAVE_CONFIG_H=1 -DWEBKITGTK_API_VERSION_STRING=\"4.0\" -I../../Source/bmalloc -fdiagnostics-color=always -fcolor-diagnostics -Wno-parentheses-equality -Qunused-arguments -Wwrite-strings -Wundef -Wpointer-arith -Wmissing-format-attribute -Wformat-security -Wcast-align -Wextra -Wall -march=corei7 -B/home/lantw44/.local/bin -pipe -O3 -fno-strict-aliasing -fno-exceptions -std=c++14 -fno-rtti -O3 -DNDEBUG -fPIC -MD -MT Source/bmalloc/CMakeFiles/bmalloc.dir/bmalloc/IsoTLS.cpp.o -MF Source/bmalloc/CMakeFiles/bmalloc.dir/bmalloc/IsoTLS.cpp.o.d -o Source/bmalloc/CMakeFiles/bmalloc.dir/bmalloc/IsoTLS.cpp.o -c ../../Source/bmalloc/bmalloc/IsoTLS.cpp ../../Source/bmalloc/bmalloc/IsoTLS.cpp:63:21: error: use of undeclared identifier 'stderr' setvbuf(stderr, NULL, _IONBF, 0); ^ ../../Source/bmalloc/bmalloc/IsoTLS.cpp:63:35: error: use of undeclared identifier '_IONBF' setvbuf(stderr, NULL, _IONBF, 0); ^ 2 errors generated.
Attachments
Patch
(1008 bytes, patch)
2017-12-20 10:43 PST
,
Ting-Wei Lan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ting-Wei Lan
Comment 1
2017-12-20 10:43:39 PST
Created
attachment 329934
[details]
Patch
WebKit Commit Bot
Comment 2
2017-12-20 17:07:53 PST
Comment on
attachment 329934
[details]
Patch Clearing flags on attachment: 329934 Committed
r226204
: <
https://trac.webkit.org/changeset/226204
>
WebKit Commit Bot
Comment 3
2017-12-20 17:07:54 PST
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 4
2017-12-20 17:11:03 PST
<
rdar://problem/36168329
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug